--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,86 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-div#root {
+div#root,
+.tv,
+.screen-content,
+.screen-inner {
     height: 100%;
+}
+
+.tv._off .screen-content {
+    -webkit-animation: shutdown 400ms linear;
+    animation: shutdown 400ms linear;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+.tv._off .screen-inner {
+    background-color: #000000;
+}
+
+.tv._off .screen-content:after {
+    -webkit-animation: shutdown-opa 400ms linear;
+    animation: shutdown-opa 400ms linear;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes shutdown {
+    0% {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+    20% {
+        -webkit-transform: scale3d(1, 1.6, 1);
+        transform: scale3d(1, 1.6, 1);
+    }
+    50% {
+        -webkit-transform: scale3d(1, 0.005, 1);
+        transform: scale3d(1, 0.005, 1);
+    }
+    100% {
+        -webkit-transform: scale3d(0, 0, 1);
+        transform: scale3d(0, 0, 1);
+    }
+}
+@keyframes shutdown {
+    0% {
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+    }
+    20% {
+        -webkit-transform: scale3d(1, 1.6, 1);
+        transform: scale3d(1, 1.6, 1);
+    }
+    50% {
+        -webkit-transform: scale3d(1, 0.005, 1);
+        transform: scale3d(1, 0.005, 1);
+    }
+    100% {
+        -webkit-transform: scale3d(0, 0, 1);
+        transform: scale3d(0, 0, 1);
+    }
+}
+@-webkit-keyframes shutdown-opa {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes shutdown-opa {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
 }
